hero gap fix

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -327,7 +327,7 @@ section{
     }
 
     #hero-container{
-        min-height: 1100px;
+        min-height: 800px;
     }
 
     .info-text{
